# lexupdater

./: .gitignore  .pylintrc  LESMEG.md  LICENSE  Makefile  README.md  config.py  dbtest02.ipynb  download_rules.sh  exemptions.py  fetch_data.sh  fetch_files_github.sh  lexupdater.py  newword.py  nyord.csv  nyord02.csv  phoneme_inventory.txt  pyproject.toml  regeloppdatering.ipynb  requirements.dev  requirements.txt  rules.py  setup.cfg  setup.py  update_from_other_git_repos.sh
.github/workflows/: tests.yml
data/: nst_lexicon_bm.db
data/input/: .gitignore
lexica/: .gitignore
lexupdater/: __init__.py  __main__.py  config.py  constants.py  conversion.py  db_handler.py  dialect_updater.py  lexupdater.py  newword_updater.py  rule_objects.py  utils.py
lexupdater/config/: __init__.py  blacklists.py  config.py  constants.py  exemptions.py  rules.py
tests/: conftest.py  dummy_config.py  dummy_data.db  dummy_exemptions.py  dummy_newword.py  dummy_newwords_1.csv  dummy_newwords_2.csv  dummy_rules.py  test_db_handler.py  test_dialect_updater.py  test_lexupdater.py  test_newword_updater.py  test_rule_objects.py  test_utils.py
