[metadata]
name = lexupdater
version = 0.1.2.bugfixes
author = Språkbanken
author_email = sprakbanken@nb.no
description = Verktøy for å oppdatere transkripsjoner i NST sitt uttaleleksikon med ulike norske dialekter
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/peresolb/lexupdater
project_urls =
    Bug Tracker = https://github.com/peresolb/lexupdater/issues
keywords = pronunciation, lexicon, transcriptions, norwegian, dialects
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Natural Language :: Norwegian
    Topic :: Database
    Topic :: Text Processing :: Linguistic
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    schema
    Click
    pandas
    pandera

[options.entry_points]
console_scripts =
    lexupdater = lexupdater.lexupdater:main

[bdist_wheel]
universal = 1
